for deploy test

--- a/pages/info_test.html
+++ b/pages/info_test.html
@@ -111,17 +111,33 @@
     <hr>
 
     <div class="info_box">
-        <a href="#" id="info_box1">서귀포시 직영관광지 관람객수 추이
-            <span id="box1_span">2023.11.08   |  서귀포시 직영관광지의 관람객수를 월별로 알아...</span>
+        <a href="#" id="info_box1">
+            <img id="info_image1" src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fpng.pngtree.com%2Fpng-vector%2F20190822%2Fourlarge%2Fpngtree-graph-analytics-business-diagram-marketing-statistics-tren-png-image_1696127.jpg&type=a340">
+            <h2 id= "box1_title" >서귀포시 직영관광지 관람객수 추이(월간)</h2>  
+            <span id="box1_span"> 2023.11.08 | 서귀포시 직영관광지의 관람객수를 월별로 알아...</span>
         </a>
-        <a href="#" id="info_box2">서귀포시</a>
+
+        <a href="#" id="info_box2">
+            <img id="info_image1" src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fpng.pngtree.com%2Fpng-vector%2F20190822%2Fourlarge%2Fpngtree-graph-analytics-business-diagram-marketing-statistics-tren-png-image_1696127.jpg&type=a340">
+            <h2 id= "box1_title" >서귀포시 감귤 종류별 면적 및 생산량 추이(연간)</h2>  
+            <span id="box1_span"> 2023.11.08 | 서귀포시에서 생산하는 감귤 종류별로 면적...</span>
+        </a>
+            
+
         <a href="#" id="info_box3">서귀포시</a>
+
         <a href="#" id="info_box4">서귀포시</a>
+
         <a href="#" id="info_box5">서귀포시</a>
+
         <a href="#" id="info_box6">서귀포시</a>
+
         <a href="#" id="info_box7">서귀포시</a>
+
         <a href="#" id="info_box8">서귀포시</a>
+
         <a href="#" id="info_box9">서귀포시</a>
+
         <a href="#" id="info_box10">서귀포시</a>
 
 
@@ -130,9 +146,8 @@
 
 
 
-    <br><br>
-
-
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    
 
 
     </div> <!-- infographic_container2 끝 -->
