--- a/pages/main.html
+++ b/pages/main.html
@@ -286,11 +286,10 @@
 <body>
     <!-- headder -->
     <header class="header">
-        
         <img src="../images/components/datahub-logo-removebg-preview.png" alt="logo">
         <nav>
             <ul>
-                <li>이용안내</li>
+                <li><a href="../pages/main.html">이용안내</a></li>
                 <li><a href="../pages/data.html">데이터</a></li>
                 <li class="dropdown">
                     <a href="../pages/infographic.html">인포그래픽</a>
