Co-authored-by: SeokHwanJeongKR, yoda

--- a/pages/info_test.html
+++ b/pages/info_test.html
@@ -112,9 +112,11 @@
 
     <div class="info_box">
         <a href="#" id="info_box1">
-            <img id="info_image1" src="https://search.pstatic.net/sunny/?src=https%3A%2F%2Fpng.pngtree.com%2Fpng-vector%2F20190822%2Fourlarge%2Fpngtree-graph-analytics-business-diagram-marketing-statistics-tren-png-image_1696127.jpg&type=a340">
+            <img id="info_image1" src="https://postfiles.pstatic.net/MjAyNDExMDFfMTEw/MDAxNzMwNDQyMjUyNzky.enSKtM5U_iccVH7BwAziI2I6x3C5CFpnrOeIvf4dxK8g.3PRxZq93paMKFOwKqn5Hb1ODjO6WhPzI2yQVRsSrXzEg.PNG/info_image1.png?type=w773">
+            <div class="">
             <h2 id= "box1_title" >서귀포시 직영관광지 관람객수 추이(월간)</h2>  
             <span id="box1_span"> 2023.11.08 | 서귀포시 직영관광지의 관람객수를 월별로 알아...</span>
+            </div>
         </a>
 
         <a href="#" id="info_box2">
