--- a/pages/infographic.html
+++ b/pages/infographic.html
@@ -24,7 +24,9 @@
     <!-- 위쪽 -->
     <!-- 헤더 여기에 넣고 -->
     <header class="header">
-        <img src="../images/components/datahub-logo-removebg-preview.png" alt="logo">
+        <a href="../pages/main.html">
+            <img src="../images/components/datahub-logo-removebg-preview.png" alt="logo">
+        </a>
         <nav>
             <ul>
                 <li><a href="../pages/main.html">이용안내</a></li>
@@ -32,25 +34,27 @@
                 <li class="dropdown">
                     <a href="../pages/infographic.html">인포그래픽</a>
                     <ul class="submenu">
-                        <li>차트인포그래픽</li>
+                        <li><a href="../pages/infographic.html">차트인포그래픽</a></li>
                         <li>영상인포그래픽</li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    리포트
+                    <a href="../pages/aireport.html">리포트</a>
+                    
                     <ul class="submenu">
-                        <li>AI리포트</li>
-                        <li>정기리포트</li>
+                        <li><a href="../pages/aireport.html">AI리포트</a></li>
+                        <li><a href="../pages/essencereport.html">정기리포트</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    지역빅데이터센터
+                    <a href="../pages/jeju-center.html">지역빅데이터센터</a>
                     <ul class="submenu">
-                        <li>센터소개</li>
+                        <li><a href="../pages/jeju-center.html">센터소개</a></li>
+                        
                         <li>제공데이터</li>
                         <li>데이터검색</li>
-                        <li>분석실예약</li>
-                        <li>교육장예약</li>
+                        <li><a href="../pages/jeju-analysis.html">분석실예약</a></li>
+                        <li><a href="../pages/jeju-classroom.html">교육장예약</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
