--- a/pages/main.html
+++ b/pages/main.html
@@ -20,13 +20,13 @@
         </a>
         <nav>
             <ul>
-                <li><a href="../pages/main.html">이용안내</a></li>
+                <li><a href="../pages/chatbot.html">이용안내</a></li>
                 <li><a href="../pages/data.html">데이터</a></li>
                 <li class="dropdown">
                     <a href="../pages/infographic.html">인포그래픽</a>
                     <ul class="submenu">
                         <li><a href="../pages/infographic.html">차트인포그래픽</a></li>
-                        <li>영상인포그래픽</li>
+                        <li><a href="../pages/infographic-media.html">영상인포그래픽</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -191,6 +191,20 @@
                                     VMhXmkFgqDRK3V5nbwCFGiUBXrNSSlEhUYv0fI6iQEXjXA+6BzfUtFFFrloHriFftFYJOH6IrF6TSegE9AJ6A
                                     R0AjqBuCXwBcOTs5FpuAokAAAAAElFTkSuQmCC">
                                 </div>
+
+                                <!-- <div class="mbirightgrid-under-button">
+                                    <img class="arrowset" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR
+                                    0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAA
+                                    AAMKADAAQAAAABAAAAMAAAAADbN2wMAAAB7ElEQVRoBe2XMU/CQBTH7xWCaKIfgJGaGHRx5zNYw+CkggsJJu6
+                                    6qV9CcANDYuIAga9g2JnsIDD6AXQQEXheU09votS+a2tyDNylV+7+//97/ZEypj86AZ2ATkAnoBPQCfzjBEyr
+                                    0dqy7jNRWTCCHoyIhU/28ZS17ip8DkH38/v7wAdm9+ooDgVgPSNhlJ/bRVtcUz0GroAsEJHl5zPsZ63G5c7BQ
+                                    0peUzUnNeCI5G2U4l9X4/F737SaeVXCxb7kBsTGyDCHOHvkz8bN5mFzQ1ynHpUZcIXyhxrnp/g2tc39RoFavL
+                                    OfYgPfNpBlcI4tFcgNxYBI3kHuFCc2JXJJMSqELjNSITfUCsjGqJAbmQHHDAVyIzUgKiKQa1r1ql/kxsKAawS
+                                    Bt1XFL3JjZEDUw98YIwOAnEw1XFnbHnZK7WVtJJe9UeV9wMBmkCgPu0c9v+dEWgEAmBgA1+n06u5fxDtmI6uA
+                                    +0cGgd8dQjfA2+WV8+Zi0CnVeAV+Xob8to64P9QW4oLbSUjlRt2TKoX40FqIt8sLAzjzQxeRsNeouAIuGmE9m
+                                    VMhXmkFgqDRK3V5nbwCFGiUBXrNSSlEhUYv0fI6iQEXjXA+6BzfUtFFFrloHriFftFYJOH6IrF6TSegE9AJ6A
+                                    R0AjqBuCXwBcOTs5FpuAokAAAAAElFTkSuQmCC">
+                                </div> -->
                             </div>
                             
                         </div>
