--- a/pages/jeju-classroom.html
+++ b/pages/jeju-classroom.html
@@ -18,13 +18,13 @@
         </a>
         <nav>
             <ul>
-                <li><a href="../pages/main.html">이용안내</a></li>
+                <li><a href="../pages/chatbot.html">이용안내</a></li>
                 <li><a href="../pages/data.html">데이터</a></li>
                 <li class="dropdown">
                     <a href="../pages/infographic.html">인포그래픽</a>
                     <ul class="submenu">
                         <li><a href="../pages/infographic.html">차트인포그래픽</a></li>
-                        <li>영상인포그래픽</li>
+                        <li><a href="../pages/infographic-media.html">영상인포그래픽</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -58,7 +58,7 @@
             </ul>
         </nav>
         <div class="auth-buttons">
-            <button>로그인</button>
+            <a href="../pages/login.html"><button>로그인</button></a>
             <button>회원가입</button>
         </div>
 
