--- a/pages/graphics/general.html
+++ b/pages/graphics/general.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>제주데이터허브</title>
 
     <link rel="icon" href="../../images/components/favicon.ico">
     <link rel="stylesheet" href="../../css/header.css">
